--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "scripts": {
     "start": "node www",
-    "watch": "nodemon www"
+    "watch": "nodemon www",
+    "mocha": "mocha",
+    "test": "mocha tests"
   },
   "author": "Shlomi Levi <wizardnet972>",
   "license": "MIT",
@@ -20,6 +22,14 @@
     "mongoose": "^4.4.5",
     "morgan": "^1.7.0",
     "node-promise": "^0.5.12",
-    "promise": "^7.1.1"
+    "promise": "^7.1.1",
+    "query-string": "^4.2.3"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "chai-jwt": "^2.0.0",
+    "mocha": "^3.2.0",
+    "sinon": "^1.17.6"
   }
 }
