--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "mongoose": "^4.4.5",
     "morgan": "^1.7.0",
     "node-promise": "^0.5.12",
-    "promise": "^7.1.1",
-    "query-string": "^4.2.3"
+    "promise": "^7.1.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
